--- a/whack-the-moles.html
+++ b/whack-the-moles.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="whack.css">
+    <script src="whack.js" defer></script>
     <title>Document</title>
   </head>
   <body>
-    <h1>Hi</h1>
+    <h1>WHACK THE MOLES</h1>
+    <h1>SCORE: <span id="points">0</span></h1>
+    <div id="moleGrid" class="molesGrid">
+      <div class="grid square1">1</div>
+      <div class="grid square2">2</div>
+      <div class="grid square3">3</div>
+      <div class="grid square4">4</div>
+      <div class="grid square5">5</div>
+      <div class="grid square6">6</div>
+      <div class="grid square7">7</div>
+      <div class="grid square8">8</div>
+      <div class="grid square9">9</div>
+    </div>
   </body>
 </html>
